--- a/index.html
+++ b/index.html
@@ -4,4 +4,9 @@
     <title>Rony P</title>
     <link rel="stylesheet" href="./style.css">
   </head>
+  <body>
+    <div>
+      <h1>Hi, I'm Rony</h1>
+    </div>
+  </body>
 </html>
