--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div>
-      <h2>Hi, I'm Rony</h2>
+      <h2 class="greetings">Hi, I'm Rony</h2>
     </div>
   </body>
 </html>
