new stuff again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rony P</title>
     <link rel="icon" href="/assets/rony.png">
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="styles.css">  
   </head>
   <body>
     <div class="container">
