--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Rony P</title>
-    <link rel="icon" href="/assets/rony.png">
-    <link rel="stylesheet" href="styles.css">  
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="greetings">Hey there</h1>
-      <p class="description">This website is currently under construction, check back later!</p>
+    <head>
+        <title>Rony Philip</title>
+        <link rel="icon" href="assets/Icons/ronyLogo.png">
+        <meta name="description" content="Rony's corner of the world wide web!">
 
-      <button onclick="document.location='https://discord.gg/XbkmqxDvms'" class="join-my-discord">
-        Join my Discord
-      </button>
-    </div>
-  </body>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <div class="navbar">
+            <div class="info">
+                <img class="pfp" src="">
+                <div class="user-info">
+                    <p class="username">Rony</p>
+                    <p class="usertag">#0007</p>
+                </div>
+            </div>
+            <div class="buttons">
+                <button class="button">About</button>
+                <button class="button">Projects</button>
+                <button class="button">Blog</button>
+                <button class="button">Links</button>
+            </div>
+        </div>
+    </body>
 </html>
