--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
                 <button class="button">Links</button>
             </div>
         </div>
+        <p style="color: #FFFFFF;">This website is undergoing development, check back later!</p>
     </body>
 </html>
