--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="navbar">
 
-        <div class="discord-">
+        <div class="discord-info">
             <img class="pfp" src="assets/Images/pfp.png">
 
             <div class="user-info">
